# mrgen

./: .mrgen.yaml  Cargo.toml  README.md
src/: conf.rs  main.rs
