[package]
name = "mrgen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
git2 = "0.20.0"
itertools = "0.14.0"
regex = "1.11.1"
semver = "1.0.24"
serde = { version = "1.0.217", features = ["derive"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.34"
